# protocol-table-agent

./: AGENTS.md  README.md  TASK_SPEC.md  pyproject.toml
artifacts/metrics/: benchmark_results.json  benchmark_summary.json
artifacts/outputs/: case_003.json  case_008.json  case_009.json  case_012.json
artifacts/self_improve/: iteration_01.json  iteration_02.json
benchmarks/: BENCHMARK_PLAN.md
benchmarks/cases/synthetic/: case_001.txt  case_002.txt  case_003.txt  case_004.txt  case_005.txt  case_006.txt  case_007.txt  case_008.txt  case_009.txt  case_010.txt  case_011.txt  case_012.txt
benchmarks/gold/synthetic/: case_001.json  case_002.json  case_003.json  case_004.json  case_005.json  case_006.json  case_007.json  case_010.json  case_011.json  case_012.json
inputs/examples/: file_parser_example.json
prompts/: CODEX_BOOTSTRAP_PROMPT.md
schema/: protocol_table.schema.json
src/eval/: run_benchmark.py  validate_outputs.py
src/parser/: cli.py  core.py  models.py
src/runner/: report_metrics.py  self_improve.py
src/synth/: generate_cases.py
tests/: test_parser.py  test_synth_and_eval.py
