[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-table-agent"
version = "0.1.0"
description = "Deterministic protocol table extraction and benchmark tooling"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
